applications/echoserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: echoserver
spec: {}
status: {}
