applications/echoserver/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    cert-manager.io/cluster-issuer: zerossl-production
spec:
  gatewayClassName: merged-eg
  listeners:
  - name: https
    protocol: HTTPS
    hostname: echoserver.gateway.rye.ninja
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: eg-https
