applications/echoserver/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver
  namespace: echoserver
spec:
  parentRefs:
  - name: echoserver
  hostnames:
  - echoserver.gateway.rye.ninja
  rules:
  - backendRefs:
    - name: echoserver
      port: 8080
